--- a/.github/workflows/format-style.yml
+++ b/.github/workflows/format-style.yml
@@ -30,9 +30,17 @@ jobs:
         with:
           include-glob: '*.index, *.xml'
           path: '.'
+      - name: Checking for changes
+        id: cfc
+        run: |
+          if git diff --quiet; then
+            echo diff=false >> $GITHUB_ENV
+          else
+            echo diff=true >> $GITHUB_ENV
+          fi
       - name: Create Pull Request
         id: cpr
-        if: github.repository == 'GustavoSchip/elements-gus'
+        if: github.repository == 'GustavoSchip/elements-gus' && steps.cfc.outputs.diff == true
         uses: peter-evans/create-pull-request@main
         with:
           commit-message: Formatted with style
@@ -40,7 +48,7 @@ jobs:
           body: Formatted with style
           branch: master-format
       - uses: peter-evans/enable-pull-request-automerge@main
-        if: github.repository == 'GustavoSchip/elements-gus'
+        if: github.repository == 'GustavoSchip/elements-gus' && steps.cfc.outputs.diff == true
         with:
           pull-request-number: '${{ steps.cpr.outputs.pull-request-number }}'
           merge-method: squash
