--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: forbid-submodules
+-   repo: https://github.com/collective/zpretty
+    rev: 3.1.0
+    hooks:
+    -   id: zpretty
