--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -24,7 +24,7 @@ jobs:
           search-text: '{{ GITHUB_REPO }}'
           replacement-text: '${{ github.server_url }}/${{ github.repository }}'
       - name: Formatting with style
-        uses: ./.github/workflows/format-style.yml
+        uses: GustavoSchip/elements-gus/.github/workflows/format-style.yml@main
       - name: Publishing processed Wiki
         uses: Andrew-Chen-Wang/github-wiki-action@master
         with:
