--- a/.github/workflows/format-style.yml
+++ b/.github/workflows/format-style.yml
@@ -1,8 +1,7 @@
 name: Format Style
 on:
-  push:
-    branches: [ '**' ]
-    tags-ignore: [ '**' ]
+  pull_request:
+    types: [opened, reopened, synchronize]
     paths:
       - '**.index'
       - '**.xml'
@@ -10,7 +9,7 @@ on:
   workflow_dispatch:
   workflow_call:
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: Format Style
   cancel-in-progress: true
 permissions:
   contents: write
